# acitx-diesel-notes

./: .gitignore  Cargo.toml  bashrc  docker-compose.yml
database/: Cargo.toml  diesel.toml
database/src/: lib.rs  models.rs  schema.rs
src/: main.rs
src/auth/: mod.rs
src/routes/: auth_route.rs  mod.rs  notes_route.rs  users_route.rs
