[package]
name = "actix-server"
version = "0.1.0"
edition = "2021"
[workspace]
members = ['database']
[dependencies]
actix-web = "4.9.0"
jsonwebtoken = "9.3.0"
diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
# pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] } 
dotenvy = "0.15"
database = { path = "database" }
serde = "1.0.210"
serde_json = "1.0.128"
r2d2 = "0.8.10"
bcrypt = "0.15.1"
time = "0.3.36"
actix-extras = "0.1.0"
actix-web-httpauth = "0.8.2"

